platform/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
spec:
  selector:
    app.kubernetes.io/name: keycloak
  ports:
    - name: http
      port: 80
      targetPort: http
